# msp430

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  main.c
cmake/: msp430-toolchain-docker.cmake  msp430-toolchain.cmake
common/: CMakeLists.txt
common/include/common/: ssd1306.h
common/include/msp430/: resources.h
common/src/: i2c.c  ring_buffer.c  ssd1306.c
core/: CMakeLists.txt
core/include/core/: gpio.h  i2c.h  resources.h  ring_buffer.h  sht3xdis.h  spi.h  ssd1306.h  uart.h
core/include/core/drivers/: adxl345.h  ssd1681.h
core/src/: gpio.c  i2c.c  ring_buffer.c  sht3xdis.c  spi.c  ssd1306.c  uart.c
core/src/drivers/: adxl345.c  ssd1681.c
font/: create.py
hwlib/msp430/: CMakeLists.txt
hwlib/msp430/include/hwlib/: flash.h  gpio.h  i2c.h  spi.h  timer.h  uart.h
hwlib/msp430/src/: flash.c  gpio.c  i2c.c  spi.c  timer.c  uart.c  usci.c
hwlib/msp430fr2433/: CMakeLists.txt
hwlib/msp430fr2433/include/hwlib/: spi.h
hwlib/msp430fr2433/src/: gpio.c  spi.c
include/msp430/: i2c.h  ssd1306.h
libraries/i2c/: CMakeLists.txt
libraries/i2c/include/i2c/: i2c.h
libraries/i2c/src/: i2c.c
libraries/ssd1306/: CMakeLists.txt
libraries/ssd1306/include/ssd1306/: ssd1306.h
libraries/ssd1306/src/: ssd1306.c
libraries/uart/: CMakeLists.txt
libraries/uart/include/uart/: uart.h
libraries/uart/src/: uart.c
projects/blink/: CMakeLists.txt  settings.sh
projects/blink/src/: project.c
projects/control/: CMakeLists.txt  settings.sh
projects/control/include/project/: project.h
projects/control/src/: project.c
projects/counter/: CMakeLists.txt  settings.sh
projects/counter/include/project/: project.h
projects/counter/src/: project.c
projects/dev/: CMakeLists.txt  settings.sh
projects/dev/include/project/: project.h
projects/dev/resources/: font.txt
projects/dev/src/: font.txt.s  project.c
projects/epd/: CMakeLists.txt  settings.sh
projects/epd/include/project/: project.h
projects/epd/src/: .project.c.swp  project.c
projects/flash_mem/: CMakeLists.txt  settings.sh
projects/flash_mem/include/project/: project.h
projects/flash_mem/src/: project.c
projects/lpw/: CMakeLists.txt  settings.sh
projects/lpw/include/project/: frame.h  project.h  sharp_memory_display.h
projects/lpw/src/: frame.c  project.c  sharp_memory_display.c
projects/test/: CMakeLists.txt  settings.sh
projects/test/include/project/: project.h
projects/test/src/: project.c
src/: font.s  font.txt  i2c.c  ssd1306.c
